@@ -139,6 +139,9 @@ New features added
 
   - New ``graphviz`` extension to embed graphviz graphs.
 
+  - New ``inheritance_diagram`` extension to embed... inheritance
+    diagrams!
+
   - Autodoc now has a reusable Python API, which can be used to
     create custom types of objects to auto-document (e.g. Zope
     interfaces).  See also ``Sphinx.add_autodocumenter()``.
